config/ollyman/http-routes.yaml
# This is mostly just a test 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium
    namespace: default
  hostnames:
  - grafana.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickhouse-http
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium
    namespace: default
  hostnames:
  - clickhouse.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: clickhouse
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickhouse-mcp
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium
    namespace: default
  hostnames:
  - clickhouse-mcp.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: clickhouse-mcp
      port: 8000
